@@ -16,6 +16,13 @@ instead of -1 if width was < 1.
 [5] The Huffman encoder now uses clz and bsr instructions for bit counting on
 ARM64 platforms (see 1.4 beta1 [5].)
 
+[6] The close() method in the TJCompressor and TJDecompressor Java classes is
+now idempotent.  Previously, that method would call the native tjDestroy()
+function even if the TurboJPEG instance had already been destroyed.  This
+caused an exception to be thrown during finalization, if the close() method had
+already been called.  The exception was caught, but it was still an expensive
+operation.
+
 
 1.3.90 (1.4 beta1)
 ==================
